# ROCKET-1

./: .gitignore  README.md  index.html  pyproject.toml
rocket/: Dockerfile
rocket/arm/: eval_rocket.py  sessions.py
rocket/arm/configs/policy/: rocket_minecraft.yaml
rocket/arm/models/: __init__.py  utils.py
rocket/arm/models/agents/: __init__.py  base_agent.py  conditioned_agent.py
rocket/arm/models/backbones/: __init__.py  clipv.py  dinosiglip_vit.py  efficient.py  impala.py  nfnet.py  openvla_base_vision.py  resnet.py  state.py  swin_transformer.py
rocket/arm/models/encoders/: __init__.py  action.py  body.py  language.py  scalar.py  vision.py
rocket/arm/models/fusions/: __init__.py  film.py
rocket/arm/models/heads/: __init__.py  recon_head.py
rocket/arm/models/policys/: __init__.py  rocket_policy.py
rocket/arm/utils/: transformers.py  vision.py
rocket/arm/utils/efficientnet_lib/: model.py
rocket/arm/utils/vpt_lib/: action_head.py  action_mapping.py  actions.py  env_worker.py  impala_cnn.py  masked_attention.py  minecraft_util.py  mlp.py  policy.py  scaled_mse_head.py  torch_util.py  util.py  xf.py
rocket/assets/: __init__.py  spawn.json
rocket/env_configs/rocket/: base.yaml  collect_wood.yaml  craft_env.yaml  craft_ladder.yaml  digdown.yaml  hunt_cowonly.yaml  hunt_fence.yaml  interact_chest.yaml  interact_house.yaml  interact_portal.yaml  mine_coal.yaml  mine_emerald.yaml  navigate_ocean.yaml  navigate_village.yaml  place_door.yaml  place_minecart.yaml  tool_fire.yaml  tool_lava.yaml
rocket/stark_tech/: __init__.py  entry.py  env_interface.py  play.py  replay.py  run_test.py  traj_selector_ui.py
rocket/stark_tech/configs/: bot_plan.yaml  human.yaml
rocket/stark_tech/env/: _multiagent.py  _singleagent.py  daemon.py  malmo.py
rocket/stark_tech/herobraine/: env_spec.py  envs.py  test_env_spec.py  wrapper.py
rocket/stark_tech/herobraine/data/: pipeline_with_reward.py
rocket/stark_tech/herobraine/env_specs/: basalt_specs.py  equip_weapon_specs.py  human_controls.py  human_survival_specs.py  navigate_specs.py  obtain_specs.py  simple_embodiment.py  survival_specs.py  test_env_regressions.py  treechop_specs.py
rocket/stark_tech/herobraine/hero/: __init__.py  test_spaces.py
rocket/stark_tech/herobraine/hero/handlers/: test_handlers.py  translation.py
rocket/stark_tech/herobraine/hero/handlers/agent/: action.py  quit.py  reward.py  start.py
rocket/stark_tech/herobraine/hero/handlers/agent/actions/: camera.py  chat.py  craft.py  equip.py  keyboard.py  mob.py  mousewheel.py  place.py  smelt.py  voxel.py
rocket/stark_tech/herobraine/hero/handlers/agent/observations/: compass.py  equipped_item.py  guicontainer.py  inventory.py  is_gui_open.py  lifestats.py  location_stats.py  mc_base_stats.py  pov.py
rocket/stark_tech/herobraine/hero/handlers/server/: misc.py  navigation.py  quit.py  start.py  world.py
rocket/stark_tech/herobraine/wrappers/: __init__.py  compat_v0.py  obfuscation_wrapper.py  test_util.py  test_wrappers.py  util.py  vector_wrapper.py
rocket/stark_tech/human_play_interface/: human_play_interface.py
rocket/stark_tech/interactor/: __main__.py
rocket/stark_tech/utils/: __init__.py  documentation.py  inventory.py  launch.py
